# backend/pkg/routes/devmanager.go
@@ -20,5 +20,7 @@ func NewDeviceManagerHTTPLayer(router *gin.RouterGroup, svc services.DeviceManag
 	rv1.PATCH("/devices/:id/metadata", routes.UpdateDeviceMetadata)
 	rv1.DELETE("/devices/:id/decommission", routes.DecommissionDevice)
 	rv1.GET("/devices/dms/:id", routes.GetDevicesByDMS)
-
+	rv1.GET("/devices/:id/events", routes.GetDeviceEvents)
+	// rv1.GET("/devices/:id/events/stream", stream.SSEConnMiddleware(), routes.GetDeviceEventsInStream)
+	rv1.POST("/devices/:id/events", routes.CreateDeviceEvent)
 }
